--- a/roles/main.yaml
+++ b/roles/main.yaml
@@ -1,6 +1,6 @@
 - name: "setup {{ component }} server"
   hosts: "{{ component }}"
-  connection: local
+  connection: localhost
   become: yes
   roles:
   - "{{ component }}"
